gap-fixed

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,8 @@
     flex-direction: column;
   }
   .text-container{
-    color:rgb(9, 65, 2);justify-content: space-between;
+    color:rgb(9, 65, 2);
+    justify-content: space-between;
   }
    
 }
@@ -67,7 +68,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  gap:12%;
+  gap:10%;
   animation: scroll-text linear infinite;
  
 }
